GNOME Bugzilla – Bug 671378
Orca doesn't present "Overview" name when this is focused
Last modified: 2012-03-19 14:10:09 UTC
STEPS 1. GNOME Shell and Orca running 2. Press Alt+F1 to move to the overview EXPECTED OUTCOME Orca presents "Overview Panel" ACTUAL OUTCOME Orca presents "Panel" EXTRA NOTES This is a regression caused by stop to use clutter-name as the default accessible name: http://git.gnome.org/browse/clutter/commit/?id=dde5da1dd8f75c3522f3b89417f3e5eb5a414a25 This was done after a chat on IRC with Emmanuele Bassi, where he confirmed that Clutter::name is used for debug purposes. In the same way, that change was required to avoid Orca exposing "panelActivities Activities button" instead of "Activities button" after bug 670312.
Created attachment 209006 [details] [review] First tentative solution In opposite to other components that require to have a name, there is no "Overview" label. This patch creates a "Overview" label to set the name. I don't like too much this solution, as creates an artificial label just to set the accessible name. The natural solution could be add a "accessible-name" property on st-widget (as I did with the accessible role). But in the same way, I don't like this solution as it seems like an overkill. Adding a new property on st-widget to be used just in one specific case (as in all the other cases, we have a proper label). Opinions are welcome.
Created attachment 209091 [details] [review] Add a property accessible-name
Created attachment 209092 [details] [review] Set accessible name for the overview
Created attachment 209197 [details] [review] Set accessible name and role for altTab and ctrlAltTab popups I also realize that those popups were affected by the name stuff on clutter. I also set the proper role, instead of including it on the name, so no when then popup appear orca present "Alt Tab Popup Menu" instead of old "altTabPopup panel" Adding role is somewhat out of this bug, but I think that creating a different bug could be an overkill.
Created attachment 209247 [details] [review] Add a property accessible-name Fixed two missed break on st_widget_[get/set]_property
FWIW, from last release-team IRC meeting: <API> for this patch: <API> http://bugzilla-attachments.gnome.org/attachment.cgi?id=209092 <API> I needed to add a string <API> but not sure if I need to ask a string freeze request <API> as it is not involves any UI change <fredp> yeah, you need it. <API> only orca will use that <API> fredp, ok <andre> if it already exists you don't. if it doesn't: yes. <fredp> it involves new work for translators. <andre> but maybe mention that only Orca needs it ;-) <API> ok, I will ask that as soon as danw approves the patches
Created attachment 209281 [details] [review] Set accessible name for the overview Added comments for translators, Andre Kappler suggestion.
Created attachment 209282 [details] [review] Set accessible name and role for altTab and ctrlAltTab popups Added comments for translators, Andre Kappler suggestion.
Comment on attachment 209247 [details] [review] Add a property accessible-name >+ * Object instance\'s name for assistive technology access. you don't need backslashes in gtk-doc >+ "Object instance\'s name for assistive technology access.", or paramspec strings >+ * st_widget_set_accessible_name: >+ * @widget: widget to set the accessible name for >+ * @name: a character string to be set as the accessible name @name is (allow-none), which will clear the name
Comment on attachment 209281 [details] [review] Set accessible name for the overview >+ accessible_name: _("Activities Overview"), In the docs, etc, it's called just "Overview", not "Activities Overview". Presumably this should be consistent with that. ok to commit with that change
Comment on attachment 209282 [details] [review] Set accessible name and role for altTab and ctrlAltTab popups >+ accessible_name: _("Alt Tab"), "Application Switcher" >+ accessible_name: _("Ctrl Alt Tab"), "Accessibility Switcher" (or whatever it ended up being renamed to if it was renamed).
(In reply to comment #11) > (From update of attachment 209282 [details] [review]) > >+ accessible_name: _("Alt Tab"), > > "Application Switcher" > > >+ accessible_name: _("Ctrl Alt Tab"), > > "Accessibility Switcher" (or whatever it ended up being renamed to if it was > renamed). Hmmm. I don't think we ever reached a conclusion there. :-/ In the meantime.... At least for Orca users, hearing "Accessibility Switcher" (or "<insert name here> Switcher") might wind up being unnecessary -- and possibly unwanted -- chatter. As a general rule, one does not accidentally press Ctrl Alt Tab. ;) So if the user were to press it, it was probably on purpose. In which case the most relevant thing to the user would be the currently-selected item. Beyond that.... If memory serves me, the thing didn't have a name in GNOME 2. So.... Given that we never concluded on a name, and given that a name might not be needed or desired, I'm thinking perhaps we hold off on this one particular patch and see what the users think.
Created attachment 209873 [details] [review] Add a property accessible name Updated patch after review on comment 9
Created attachment 209874 [details] [review] Set accessible name for the overview (In reply to comment #10) > (From update of attachment 209281 [details] [review]) > >+ accessible_name: _("Activities Overview"), > > In the docs, etc, it's called just "Overview", not "Activities Overview". > Presumably this should be consistent with that. Well, initially my plan was also use "Overview" but halfline suggested on IRC that "Activities Overview" was the proper name, so I thought that this the string I should use. Anyway, for me "Overview" is also fine, and have the advantage that we don't need to ask for a string freeze break request, as "Overview" is an already existing string. > > ok to commit with that change As I still need to wait for the final confirmation of the "accessible-name" property patch, I will upload the updated patch.
(In reply to comment #12) > Beyond that.... If memory serves me, the thing didn't have a name in GNOME 2. True. I have just tested this on GNOME2 and both Alt+Tab and Ctrl+Alt+Tab doesn't have a name, so Orca just exposes that a window appeared and the first item selected. Something that makes sense, as if the user is using sound card, it would be better to hear just the required to know where you are, instead of a long "Window Accessibility Switcher XXX toggle button". FWIW, I added this patch because when clutter name was used as accessible name, Orca exposed "Alt+Tab" so I thought that this was a regression. > > So.... Given that we never concluded on a name, and given that a name might not > be needed or desired, I'm thinking perhaps we hold off on this one particular > patch and see what the users think. Yes I agree, I will skip this patch. Sorry for the noise.