a11y: add a property accessible-name on StWidget

https://bugzilla.gnome.org/show_bug.cgi?id=671378